# ARENA_3.0

./: AGENTS.md  README_FOR_ME.md  pyproject.toml  requirements.txt
chapter0_fundamentals/exercises/part0_prereqs/: numpy_exercises.py
