[project]
name = "arena3"
version = "0.1.0"
description = "ARENA 3.0 - AI Safety and ML Training Curriculum"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.9.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E722", "E731", "F722", "E402", "E741"]
extend-select = ["I"]
